tests/errors/multiple-attr-vals.expect
---CODE---
1
---STDERR---
Error: tests/errors/multiple-attr-vals.futil
5 |    @external(1) @external(2) r = std_reg(32);
  |    ^^^^^^^^^^^^^^^^^^^^^^^^^ Parse error
Malformed Structure: Multiple entries for attribute: external
